# base-aprs-client

./: LICENSE  README.md  pyproject.toml  tox.ini
examples/: recv_one.py  send_message.py  send_one.py
examples/aprs_net/: net.py
src/base_aprs_client/: __init__.py  client.py  db.py  simulator.py
tests/: conftest.py  test_client.py
